set (QUTIM_INCLUDE "${CMAKE_BINARY_DIR}/qutim_include")
option(QUTIM_SHARE_DIR "Qutim share directory" "/usr/share/qutim")
add_subdirectory(3rdparty/k8json)
add_subdirectory(3rdparty/qtsolutions)
add_subdirectory(lib/qutim)
add_subdirectory(plugins)
#add_subdirectory(qml)
#add_subdirectory(share)
add_subdirectory(bin)
