set(QUTIM_INCLUDE "${CMAKE_BINARY_DIR}/qutim_include")
macro(SUBDIRLIST result curdir)
  file(GLOB children RELATIVE ${curdir} ${curdir}/*)
  set(dirlist "")
  foreach(child ${children})
	if(IS_DIRECTORY ${curdir}/${child})
	  list(APPEND dirlist ${child})
    endif()
  endforeach()
  set(${result} ${dirlist})
endmacro()
option(QUTIM_SHARE_DIR "Qutim share directory" "/usr/share/qutim")
add_subdirectory(3rdparty/k8json)
add_subdirectory(3rdparty/qtsolutions)
add_subdirectory(lib/qutim)
add_subdirectory(plugins)
#add_subdirectory(qml)
#add_subdirectory(share)
add_subdirectory(bin)
