add_subdirectory(accountcreator)
#add_subdirectory(addcontactdlg)
#add_subdirectory(adiumchat)
#add_subdirectory(adiumsrvicons)
#add_subdirectory(adiumwebview)
#add_subdirectory(antispam)
#add_subdirectory(aspeller)
#add_subdirectory(authdialog)
#add_subdirectory(autopaster)
#add_subdirectory(autoreply)
#add_subdirectory(bearermanager)
#add_subdirectory(birthdayreminder)
#add_subdirectory(blogimprover)
#add_subdirectory(chatnotificationsbackend)
#add_subdirectory(chatspellchecker)
#add_subdirectory(clconf)
#add_subdirectory(comparators)
#add_subdirectory(contactinfo)
#add_subdirectory(contactmodel)
#add_subdirectory(dataformsbackend)
#add_subdirectory(emoedit)
#add_subdirectory(emoticonssettings)
#add_subdirectory(filetransfer)
#add_subdirectory(filetransfersettings)
#add_subdirectory(floaties)
#add_subdirectory(formula)
#add_subdirectory(highlighter)
#add_subdirectory(histman)
#add_subdirectory(hunspeller)
#add_subdirectory(idledetector)
#add_subdirectory(idlestatuschanger)
#add_subdirectory(joinchatdialog)
#add_subdirectory(joingroupchatdlg)
#add_subdirectory(jsonconfig)
#add_subdirectory(jsonhistory)
#add_subdirectory(keychain)
#add_subdirectory(kineticpopups)
#add_subdirectory(kopeteemoticonsbackend)
#add_subdirectory(localization)
#add_subdirectory(logger)
#add_subdirectory(massmessaging)
#add_subdirectory(metacontacts)
#add_subdirectory(migration02x03)
#add_subdirectory(mobileabout)
#add_subdirectory(mobilecontactinfo)
#add_subdirectory(mobilenotificationssettings)
#add_subdirectory(mobilesettingsdialog)
#add_subdirectory(mobility)
#add_subdirectory(nocryptoservice)
#add_subdirectory(notificationfilter)
#add_subdirectory(notificationssettings)
#add_subdirectory(offtherecord)
#add_subdirectory(oldsoundtheme)
#add_subdirectory(password)
#add_subdirectory(plistconfig)
#add_subdirectory(proxysettings)
#add_subdirectory(qmlchat)
#add_subdirectory(qticons)
#add_subdirectory(quickchat)
#add_subdirectory(quickcontactlist)
#add_subdirectory(sdlsound)
#add_subdirectory(searchdialog)
#add_subdirectory(servicechooser)
#add_subdirectory(sessionhelper)
#add_subdirectory(shortcutsettings)
#add_subdirectory(simpleabout)
#add_subdirectory(simpleactionbox)
#add_subdirectory(simpleactions)
#add_subdirectory(simplecontactlist)
#add_subdirectory(simplerosterstorage)
#add_subdirectory(soundthemeselector)
#add_subdirectory(trayicon)
#add_subdirectory(unreadmessageskeeper)
#add_subdirectory(updater)
#add_subdirectory(urlpreview)
#add_subdirectory(weather)
#add_subdirectory(xsettingsdialog)
#add_subdirectory(yandexnarod)
#add_subdirectory(histview)

