# temp solution
macro(ADD_QUTIM_PLUGIN src)
	get_filename_component(plugin_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
	FILE(GLOB SRC ${src})
	find_package(Qt5 COMPONENTS Widgets)
	add_library(${plugin_name})
	target_link_libraries(${plugin_name} Qt5::Widgets)
endmacro()
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
foreach(subdir ${SUBDIRS})
	file(GLOB cmake_file "${subdir}/CMakeLists.txt")
	if(cmake_file)
		add_subdirectory(${subdir})
		message("Plugin ${subdir} was added to build")
	endif()
endforeach()

