# temp solution
function(ADD_QUTIM_PLUGIN PLUGIN_NAME)
	aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC)
	add_compile_definitions(QUTIM_PLUGIN_NAME="${PLUGIN_NAME}")
	add_library(${PLUGIN_NAME} ${SRC})
	find_package(Qt5 COMPONENTS ${DEPENDENCIES})
endfunction()
SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
foreach(subdir ${SUBDIRS})
	file(GLOB cmake_file "${subdir}/CMakeLists.txt")
	if(cmake_file)
		add_subdirectory(${subdir})
		message("Plugin ${subdir} was added to build")
	endif()
endforeach()

